fix center align on form

--- a/styles.css
+++ b/styles.css
@@ -167,7 +167,7 @@ pre {
 }
 
 .container-content {
-  padding-left: 60px;
+  /* padding-left: 60px; */
   padding-right: 10px;
   line-height: 45px;
   max-width: 600px;
